# haxonite

./: .gitignore  CMakeLists.txt  LICENSE.txt  README
bytecode/: BytecodeConstants.h  BytecodeDefs.cpp  BytecodeDefs.h  BytecodeEngine.cpp  BytecodeEngine.h  BytecodeFile.cpp  BytecodeFile.h  CMakeLists.txt  Heap.cpp  bcasm.cpp  bcdisasm.cpp  bclink.cpp  bcrun.cpp
compiler/: AST.cpp  AST.in  BuiltinTypes.cpp  BuiltinTypes.h  CMakeLists.txt  CTree.cpp  CTree.h  CodeGenBlock.cpp  CodeGenBlock.h  CodeGenExpr.cpp  CodeGenExpr.h  CodeGenFunc.cpp  CodeGenFunc.h  CodeGenModule.cpp  CodeGenModule.h  ConstExpr.cpp  ConstExpr.h  Context.cpp  Context.h  Error.cpp  Error.h  FileNames.cpp  FileNames.h  FunctionChecker.cpp  FunctionChecker.h  Instantiator.cpp  Instantiator.h  Lexer.cpp  Lexer.h  Link.cpp  Link.h  Location.h  Mangle.cpp  Mangle.h  ModuleScanner.cpp  ModuleScanner.h  Parser.cpp  Parser.h  TypeCheck.cpp  TypeCheck.h  (+6 more)
examples/abop/src/: TurtleGfx.hax  edge1.hax  edge2.hax  edge3.hax  koch1.hax
examples/animate1/src/: animate1.hax
examples/bubble/src/: bubble.hax
examples/calc/src/: calc.hax
examples/fontlist/src/: fontlist.hax
examples/gfx1/src/: gfx1.hax
examples/hello/src/: hello.hax
examples/hello2/src/: hello2.hax
runtime/: CMakeLists.txt  CairoXCBGfx.cpp  Gfx.h  Hash.cpp  Hash.h  hax.cpp  haxrun.cpp  runtime_File.cpp  runtime_File.h  runtime_Map.cpp  runtime_Map.h  runtime_Set.cpp  runtime_Set.h  runtime_String.cpp  runtime_String.h  runtime_StringBuf.cpp  runtime_StringBuf.h  runtime_Vector.cpp  runtime_Vector.h  runtime_alloc.cpp  runtime_alloc.h  runtime_datetime.cpp  runtime_datetime.h  runtime_format.cpp  runtime_format.h  runtime_gfx.cpp  runtime_gfx.h  runtime_math.cpp  runtime_math.h  runtime_random.cpp  runtime_random.h  runtime_regex.cpp  runtime_regex.h  runtime_serdeser.cpp  runtime_serdeser.h  runtime_system.cpp  runtime_system.h
runtime/hdr/: Map.haxh  Set.haxh  Vector.haxh  gfx.haxh  haxonite.haxh
test/: run
test/args1/: run  stdout
test/args1/src/: args1.hax
test/char1/: stdout
test/char1/src/: char1.hax
test/concat1/src/: concat1.hax
test/cond1/: stdout
test/const1/: stdout
test/datafile1/: in1.haxdata  in2.haxdata  run  stdout
test/datetime1/: stdout
test/enum1/: stdout
test/error1/: stderr
test/exit1/: run
test/file1/: input.txt  run  stdout
test/file2/: run
test/float1/: stdout
test/float2/: stdout
test/for1/: stdout
test/funcerror1/: stderr
test/funcptr2/: stdout
test/funcptr3/: stdout
test/gc1/: stdout
test/gc2/: run
test/gfx1/: run  stdout
test/gfx10/: run  stdout
test/gfx11/: d1.drawlist  d2.drawlist  d3.drawlist  run  stdout
test/gfx12/: run  stdout
test/gfx13/: stderr  stdout
test/gfx2/: run  stdout
test/gfx3/: run  stdout
test/gfx4/: run  stdout
test/gfx5/: stdout
test/gfx6/: run  stdout
test/gfx7/: run  stdout
test/gfx8/: run  stdout
test/gfx9/: run  stdout
test/int1/: stdout
test/interp1/: stdout
test/interp2/: stdout
test/loop2/: stdout
test/map1/: stdout
test/map2/: stdout
test/map3/: stdout
test/map4/: stdout
test/map5/: stdout
test/map7/: stdout
test/mem1/: stdout
test/mem2/: stdout
test/multimodule2/: run  stderr
test/private1/: run  stderr
test/publicerr1/: run  stderr
test/random1/: stdout
test/regex1/: stdout
test/regex2/: stdout
test/regex3/: stdout
test/regex4/: stdout
test/result1/: stdout
test/result2/: stdout
test/result3/: stderr
test/result4/: stdout
test/result5/: stdout
test/serdes1/: stdout
test/serdes2/: stdout
test/serdes3/: stdout
test/set1/: stdout
test/set2/: stdout
test/set3/: stderr
test/set4/: stdout
test/set5/: stdout
test/set7/: stderr
test/set8/: stdout
test/string1/: stdout
test/string2/: stdout
test/string3/: stdout
test/string4/: stdout
test/string5/: stdout
test/string6/: stdout
test/string7/: stdout
test/string8/: stdout
test/string9/: stdout
test/stringbuf1/: stdout
test/stringbuf2/: stdout
test/stringbuf3/: stdout
test/struct1/: stdout
test/unary1/: stdout
test/varerror1/: stderr
test/varstruct2/: stdout
test/varstruct3/: stderr  stdout
test/vector1/: stdout
test/vector2/: stdout
test/vector3/: stdout
test/vector5/: stdout
test/vector6/: stdout
test/vector7/: stdout
test/vector8/: stdout
test/vector9/: stdout
util/: CMakeLists.txt  ConfigFile.cpp  ConfigFile.h  DateTime.cpp  DateTime.h  NumConversion.cpp  NumConversion.h  SysIO.cpp  SysIO.h  UTF8.cpp  UTF8.h  aconf.h.in
(+107 files in other folders)
